<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:background="#FFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/background"
            android:textSize="20sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnChooseBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseBackground"
                android:textAllCaps="false"
                android:textColor="#000" />

            <Button
                android:id="@+id/btnClearBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteBackground"
                android:textAllCaps="false"
                android:textColor="#000" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/design"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonThemeBlue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/standard_lila" />

        <RadioButton
            android:id="@+id/radioButtonThemeRed"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/designRed" />

        <RadioButton
            android:id="@+id/radioButtonThemeGreen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/designGreen" />

        <RadioButton
            android:id="@+id/radioButtonThemePurple"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/blau" />

        <RadioButton
            android:id="@+id/radioButtonThemeGray"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/designGray" />

    </LinearLayout>
</LinearLayout>